--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,77 @@ body{
     height: 100vh;
     width: 70vw;
 }
+
+.card-div{
+    background-color: #222124;
+    border-radius: 10px;
+    width: 400px;
+    height: 200px;
+    margin: 6% 7%;
+    color: aliceblue;
+    box-shadow: #959da57a 0px 12px 24px;
+    display: flex;
+    flex-direction: column;
+}
+
+.inputForm{
+    background-color: #807096;
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    height: auto;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    margin: 5% auto;
+    padding: 90px 20px;
+    font-weight: 500;
+}
+.inputForm input::placeholder  {
+    color: #e7e6eb;
+    opacity: 0.7;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+    font-weight: 700;
+}
+.inputForm input{
+    background-color: #483f55;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 20px 15px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    margin-bottom: 20px;
+}
+
+
+.card-btn {
+  appearance: none;
+  background-color: #FAFBFC;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
+  box-sizing: border-box;
+  color: #24292E;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  list-style: none;
+  padding: 6px 16px;
+  position: relative;
+  transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+  word-wrap: break-word;
+}
+
+.card-btn:hover {
+  background-color: #F3F4F6;
+  text-decoration: none;
+  transition-duration: 0.1s;
+}
